--- a/doc/v4_selection_methodology.Rmd
+++ b/doc/v4_selection_methodology.Rmd
@@ -19,50 +19,49 @@ knitr::opts_chunk$set(echo = TRUE, fig.height=4, fig.width=6)
 library(jfa)
 ```
 
-## Selection methodology
+## Sampling methodology
 
-Auditors are often required to assess balances or processes that involve a large number of items. Since they cannot inspect all of these items individually, they need to select a sample to infer a statistical statement about the total population. Various selection methodologies are available for this purpose which are standard in an audit setting. However, in practice it seems that the distinction between sampling methods ---and when to use them--- is not always easy to make, thereby complicating the audit process. 
+Auditors are often required to assess balances or processes that involve a large number of items. Since they cannot inspect all of these items individually, they need to select a subset (i.e., a sample) from the total population to make a statement about a certain characteristic of the population. For this purpose, various selection methodologies are available that have become standard in an audit context. However, in practice it seems that the distinction between sampling methods ---and when to use them--- is not always easy to make. 
 
-This vignette outlines the most common sampling methods and shows how to apply these methods using the `jfa` package.
+This vignette outlines the most commonly used sampling methodology for auditing and shows how to select a sample using these methods with the `jfa` package.
 
 ### Sampling units
 
-Sampling from the population requires knowledge of the sampling units; physical representations of the population that needs to be audited. Sampling units can be individual transactions or individual monetary values. For statistical sampling, the sampling elements are required to have individual sampling units that can be assigned a probability to be included in the sample. The total collection of all elements with an assigned selection probability is named the sampling frame.
+Selecting a subset from the population requires knowledge of the sampling units; physical representations of the population that needs to be audited. Generally, the auditor has to choose between two types of sampling units: individual items in the population or individual monetary units in the population. In order to perform statistical selection, the population must be divided into individual sampling units that can be assigned a probability to be included in the sample. The total collection of all sampling units which have been assigned a selection probability is called the sampling frame.
 
 #### Records
 
-A sampling unit for record (attribute) sampling is a characteristic of a population item, like the date of payment of the receipt for coffee milk. In this case, the item that corresponds to the sampled unit (e.g., date of payment) is selected.
+A sampling unit for record (i.e., attributes) sampling is generally a characteristic of an item in the population. For example, suppose that you inspect a population of receipts. A possible sampling unit for record sampling can be the date of payment of the receipt. When a sampling unit (e.g., date of payment) is selected by the sampling algorithm, the population item that corresponds to the sampled unit is included in the sample.
 
 #### Monetary units
 
-A sampling unit for monetary unit sampling is different than a sampling unit for record (attributes) sampling in that it is an individual monetary unit within an item, like an individual dollar. In this case, the item that includes the sampled dollar is selected. For example, this can be the 10$^{th}$ dollar from a receipt for coffee milk. 
+A sampling unit for monetary unit sampling is different than a sampling unit for record sampling in that it is an individual monetary unit within an item or transaction, like an individual dollar. For example, a single sampling unit can be the 10$^{th}$ dollar from a specific receipt in the population. When a sampling unit (e.g., individual dollar) is selected by the sampling algorithm, the population item that includes the sampling unit is included in the sample.
 
 ### Sampling algorithms
 
-This section discusses the three sampling algorithms implemented in `jfa`. First, for notation, let the set of all possible samples $S_i$ be defined as $S$.
+This section discusses the three sampling algorithms implemented in `jfa`. First, for notation, let the set $S$ of all possible samples $s_i$ be defined as:
 
-$$S = \{s_1, s_2,\dots,s_M\}$$
+$$S = \{s_1, s_2,\dots,s_M\},$$
 
-and define the population $N$ as the total set of units $x_i$.
+and define the population $N$ as the total set of sampling units $x_j$.
 
-$$N = \{x_1, x_2, \dots, x_N\}$$
+$$N = \{x_1, x_2, \dots, x_N\}.$$
 
-Theoretically, every sample $S_i$ is a collection of units and is assigned an inclusion probability $p(s)$ with which this collection is drawn. Practically, this translates to each sampling unit in the population having an inclusion probability $p(x)$. The purpose of a sampling algorithm is to assign inclusion probabilities to each one of the sampling units to get to a sample of size $n$.
+Theoretically, every sample $s_i$ is a set of sampling units and is assigned a selection probability $p(s_i)$ with which this set occurs. Practically, this is equivalent to each sampling unit $x_j$ in the population having a selection probability $p(x_j)$. The purpose of the sampling algorithm is to assign selection probabilities to each of the sampling units, and draw sampling units from the population until a set of size $n$ has been created.
 
-To illustrate the procedure for different sampling algorithms we will use the `BuildIt` data set.
+The next section discusses which sampling algorithms are available in `jfa`. To illustrate the outcomes for different sampling algorithms we will use the `BuildIt` data set that can be loaded using the code below.
 
 ```{r}
 data(BuildIt)
 ```
 
+#### Random sampling
 
-#### Random selection
-
-Random sampling is the most straight-forward selection method. With this method, every combination of sampling units has the same probability of being selected as every other combination of the same number of sampling units. The procedure begins by ranking each of the units $x_i$ by their monetary value. A random selection of size $n$ of the ranks is then taken and the corresponding units are included in the sample. The inclusion probabilities for the sampling units in this method are defined as:
+Random sampling is the most simple and straight-forward selection algorithm. The random sampling algorithm provides a method that allows every sampling unit in the population an equal chance of being selected, meaning that every combination of sampling units has the same probability of being selected as every other combination of the same number of sampling units. Simply put, the algorithm draws a random selection of size $n$ of the sampling units. Therefore, the selection probability for each sampling unit is defined as:
 
 $$p(x) = \frac{1}{N},$$
 
-where $N$ is the number of units in the population. The random sampling method provides a sample that allows every sampling unit in the population an equal chance of being selected. Figure 1 provides a visualization of the simple random sampling method.
+where $N$ is the number of units in the population. To clarify this procedure, Figure 1 provides an illustration of the simple random sampling algorithm.
 
 <center>
 
@@ -70,11 +69,11 @@ where $N$ is the number of units in the population. The random sampling method p
 
 </center>
 
-**Advantages:** This method yields an optimal random selection, with the additional advantage that the sample can be extended with ease by applying the same method.
+**Advantages:** The random sampling algorithm yields an optimal random selection, with the additional advantage that the sample can be easily extended by applying the same algorithm again.
 
-**Disadvantages:** As selection probabilities are equal for all units, there is no guarantee that large elements in the population are selected.
+**Disadvantages:** Because the selection probabilities are equal for all sampling units there is no guarantee that items with a large monetary value in the population will be included in the sample.
 
-The code below shows how to apply random sampling using the `jfa` package in a record sampling and a monetary unit sampling setting.
+As an example, the code below shows how to apply the random sampling algorithm in a record sampling and a monetary unit sampling setting.
 
 ```{r}
 # Record sampling
@@ -90,7 +89,19 @@ head(sample$sample, n = 6)
 
 #### Fixed interval sampling (Systematic sampling)
 
-For this method, the auditor determines a uniform interval on the ranked units. A starting point is handpicked or randomly selected in the first interval and one item is selected throughout the population at each of the uniform intervals from the starting point. For example, if the interval has a width of 10 transactions and transaction number 5 is chosen as the starting point, the transactions 5, 15, 20 etc. are selected.
+Fixed interval sampling is an algorithm designed for yielding more representative samples than random sampling. The algorithm determines a uniform interval on the (optionally ranked) sampling units. Next, a starting point is handpicked or randomly selected in the first interval and a sampling unit is selected throughout the population at each of the uniform intervals from the starting point. For example, if the interval has a width of 10 sampling units and sampling unit number 5 is chosen as the starting point, the sampling units 5, 15, 20, etc. are selected to be included in the sample.
+
+The number of required intervals $I$ can be determined by dividing the number of sampling units in the population by the required sample size:
+
+$$I = \frac{N}{n},$$
+
+in which $n$ is the required sample size and $N$ is the total number of sampling units in the population.
+
+If the space between the selected sampling units is equal, the selection probability for each sampling unit is theoretically defined as:
+
+$$p(x) = \frac{1}{I},$$
+
+with the property that the space between selected units $i$ is the same as the interval $I$, see Figure 2. However, in practice the selection is deterministic and completely depends on the chosen `intervalStartingPoint`.
 
 <center>
 
@@ -98,25 +109,13 @@ For this method, the auditor determines a uniform interval on the ranked units. 
 
 </center>
 
-The number of required intervals $I$ can be determined by dividing the number of units in the population by the required sample size. For record sampling, the interval is calculated by dividing the number of units $N$ by the sample size $n$.
+The fixed interval algorithm, like the random sampling algorithm, yields a sample that allows every sampling unit in the population an equal chance of being selected. However, the systematic sampling algorithm has the property that all items in the population with a monetary value larger than the interval $I$ have an selection probability of one because one of these items' sampling units are always selected from the interval. Note that, if the population is arranged randomly with respect to its deviation pattern, fixed interval sampling is equivalent to random selection.
 
-$$I = \frac{N}{n}$$
+**Advantages:** The advantage of the fixed interval sampling algorithm is that it is often simple to understand and fast to perform. Another advantage is that, in monetary unit sampling, all items that are greater than the calculated interval will be included in the sample. In record sampling, since units can be ranked on the basis of value, there is also a guarantee that some large items will be in the sample.
 
-In monetary unit sampling, the interval is calculated by dividing the number of monetary units $M$ by the sample size $n$.
+**Disadvantages:** A pattern in the population can coincide with the selected interval, rendering the sample less representative. What is sometimes seen as an added complication for this algorithm is that the sample is hard to extend after drawing the initial sample. This is due to the chance of selecting the same sampling unit. However, by removing the already selected sampling units from the population and redrawing the intervals this problem can be efficiently solved.
 
-$$I = \frac{M}{n}$$
-
-If the same unit is selected in each interval, the inclusion probabilities for the sampling units in this method are defined as:
-
-$$p(x) = \frac{1}{I},$$
-
-with the property that the space between selected units $i$ is the same as the interval $I$, see Figure 2. The systematic method, like the simple random sampling method, provides a sample that allows every sampling unit in the population an equal chance of being selected. However, if the population is arranged randomly with respect to its deviation pattern, systematic selection is equivalent to simple random selection. The systematic sampling method has the property that all units larger than the interval width have an inclusion probability of one, as one of these transactions' units are always selected from the interval.
-
-**Advantages:** The advantage of the systematic sampling method is that it is often simple and fast to perform and understand. Another advantage is that, in monetary unit sampling, all transactions that are greater than the calculated interval will be selected. In record sampling, since the units are ranked, there is also a guarantee that some large transactions will be in the sample, as the method stratifies on value.
-
-**Disadvantages:** A pattern in the population can coincide with the selected interval, rendering the sample unrepresentative. What is sometimes seen as an added complication for this method is that the sample is hard to extend after drawing the initial sample due to the chance of sampling the same unit. However, by removing the already sampled units from the population and redrawing the intervals, this problem can be efficiently solved.
-
-The code below shows how to apply fixed interval sampling using the `jfa` package in a record sampling and a monetary unit sampling setting. By default, the first sampling unit from each interval is selected, but this can be changed by setting the argument `intervalStartingPoint = 1` to a different value.
+As an example, the code below shows how to apply the fixed interval sampling algorithm in a record sampling and a monetary unit sampling setting. Note that, by default, the first sampling unit from each interval is selected. However, this can be changed by setting the argument `intervalStartingPoint = 1` to a different value.
 
 ```{r}
 # Record sampling
@@ -132,7 +131,11 @@ head(sample$sample, n = 6)
 
 #### Cell sampling
 
-In the case of cell sampling, the auditor, like in systematic sampling, is again dividing the ranked population into a set of intervals $I$ that are computed by the above equations. The difference is that in cell sampling, withing each interval, a unit is selected by randomly drawing a number within the interval range. This causes the space between the intervals $i$ to vary.
+In the case of cell sampling, the algorithm, like in fixed interval sampling, is again dividing the (optionally ranked) population into a set of intervals $I$ that are computed through the previously given equations. The difference is that in cell sampling, within each interval, a sampling unit is selected by randomly drawing a number within the interval range $I$. This causes the space $i$ between the sampling units to vary.
+
+Like in the fixed interval sampling algorithm, the selection probability for each sampling unit is defined as:
+
+$$p(x) = \frac{1}{I}.$$
 
 <center>
 
@@ -140,17 +143,13 @@ In the case of cell sampling, the auditor, like in systematic sampling, is again
 
 </center>
 
-However, as in systematic sampling, the inclusion probabilities are still equal for each unit.
+The cell sampling algorithm has the property that all items in the population with a monetary value larger than twice the interval $I$ have a selection probability of one.
 
-$$p(x) = \frac{1}{I}$$
+**Advantages:** More sets of samples are possible than in fixed interval sampling, as there is no systematic interval $i$ to determine the selections. It is argued that the cell sampling algorithm offers a solution to the pattern problem in fixed interval sampling.
 
-The cell sampling algorithm has the property that all units larger than twice the interval width have a inclusion probability of one.
+**Disadvantages:** A disadvantage of this sampling algorithm is that not all items in the population with a monetary value larger than the interval have a selection probability of one. Besides, population items can be in two adjacent cells, thereby creating the possibility that an items is included in the sample twice.
 
-**Advantages:** More sets of samples are possible than in systematic sampling, as there is no fixed interval $i$ to limit the selections. This method also offers a solution to the pattern problem in systematic sampling.
-
-**Disadvantages:** A disadvantage of this selection method is that not all elements the size of one interval have a selection probability of one. On top of that elements can be in two adjacent cells, thereby creating the possibility that an element is selected twice.
-
-The code below shows how to apply cell sampling using the `jfa` package in a record sampling and a monetary unit sampling setting.
+As an example, the code below shows how to apply the cell sampling algorithm in a record sampling and a monetary unit sampling setting.
 
 ```{r}
 # Record sampling
